adding progress button

--- a/frontend/src/app/authentication/login/login.component.html
+++ b/frontend/src/app/authentication/login/login.component.html
@@ -1,36 +1,37 @@
 <div class="container">
-    <form (ngSubmit)="submitForm()" #form="ngForm">
-      <div class="form-group">
-        <label for="userName"><span class="required">*</span>User Name </label>
-        <input type="text" id="userName" class="form-control" name="userName" required [(ngModel)]="userName"
-          #userNameInput="ngModel">
-        <div style="font-size: 10px;" *ngIf="userNameInput.touched && userNameInput.invalid || (formSubmitted && userNameInput.invalid)"
-          class="alert alert-danger alert-text">
-          User Name is required.
-        </div>
+  <form (ngSubmit)="submitForm()" #form="ngForm">
+    <div class="form-group">
+      <label for="userName"><span class="required">*</span>User Name</label>
+      <input type="text" id="userName" class="form-control" name="userName" required [(ngModel)]="userName"
+        #userNameInput="ngModel">
+      <div style="font-size: 10px;" *ngIf="userNameInput.touched && userNameInput.invalid || (formSubmitted && userNameInput.invalid)"
+        class="alert alert-danger alert-text">
+        User Name is required.
       </div>
-      <div class="form-group">
-        <label for="email"><span class="required">*</span>Email </label>
-        <input type="email" id="email" class="form-control" name="email" required [(ngModel)]="email" #emailInput="ngModel">
-        <div style="font-size: 10px;" *ngIf="emailInput.touched && emailInput.invalid || (formSubmitted && emailInput.invalid)"
-          class="alert alert-danger alert-text">
-          Email is required.
-        </div>
+    </div>
+    <div class="form-group">
+      <label for="email"><span class="required">*</span>Email</label>
+      <input type="email" id="email" class="form-control" name="email" required [(ngModel)]="email" #emailInput="ngModel">
+      <div style="font-size: 10px;" *ngIf="emailInput.touched && emailInput.invalid || (formSubmitted && emailInput.invalid)"
+        class="alert alert-danger alert-text">
+        Email is required.
       </div>
-      <div class="form-group">
-        <label for="password"><span class="required">*</span>Password </label>
-        <input type="password" id="password" class="form-control" name="password" required [(ngModel)]="password"
-          #passwordInput="ngModel">
-        <div style="font-size: 10px;" *ngIf="passwordInput.touched && passwordInput.invalid || (formSubmitted && passwordInput.invalid)"
-          class="alert alert-danger alert-text">
-          Password is required.
-        </div>
+    </div>
+    <div class="form-group">
+      <label for="password"><span class="required">*</span>Password</label>
+      <input type="password" id="password" class="form-control" name="password" required [(ngModel)]="password"
+        #passwordInput="ngModel">
+      <div style="font-size: 10px;" *ngIf="passwordInput.touched && passwordInput.invalid || (formSubmitted && passwordInput.invalid)"
+        class="alert alert-danger alert-text">
+        Password is required.
       </div>
-      <button type="submit" class="btn btn-primary" [disabled]="!form.valid">Submit</button>
-      <div class="login-link">
-        Don't have an Account, <a routerLink="/authentication/register">Register</a> here.
-      </div>
-    </form>
-  </div>
-  <app-footer></app-footer>
-  
+    </div>
+    <button type="submit" class="btn btn-primary" [disabled]="!form.valid || formSubmitting">
+      <span *ngIf="formSubmitting" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+      <span *ngIf="!formSubmitting">Submit</span>
+    </button>
+    <div class="login-link">
+      Don't have an Account, <a routerLink="/authentication/register">Register</a> here.
+    </div>
+  </form>
+</div>
