--- a/frontend/src/app/authentication/register/register.component.html
+++ b/frontend/src/app/authentication/register/register.component.html
@@ -39,10 +39,12 @@
       <label style="padding: 10px;" for="isAdmin">isAdmin</label>
       <input type="checkbox" id="isAdmin" name="isAdmin" [(ngModel)]="isAdmin">
     </div>
-    <button type="submit" class="btn btn-primary" [disabled]="!form.valid">Submit</button>
+    <button type="submit" class="btn btn-primary" [disabled]="!form.valid || formSubmitting">
+      <span *ngIf="formSubmitting" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+      <span *ngIf="!formSubmitting">Submit</span>
+    </button>
     <div class="login-link">
       If you already have an account, <a routerLink="/authentication/login">Login</a> here.
     </div>
   </form>
 </div>
-<app-footer></app-footer>
