throwing correct message in alert

--- a/frontend/src/app/authentication/register/register.component.css
+++ b/frontend/src/app/authentication/register/register.component.css
@@ -5,7 +5,19 @@
 .btn {
   width: 100%;
 }
-
+.alert {
+  margin-top: 10px;
+}
+.alert-success {
+  color: #155724;
+  background-color: #d4edda;
+  border-color: #c3e6cb;
+}
+.alert-danger {
+  color: #721c24;
+  background-color: #f8d7da;
+  border-color: #f5c6cb;
+}
 .form-group {
   margin-bottom: 20px;
 }
