--- a/frontend/src/app/authentication/register/register.component.html
+++ b/frontend/src/app/authentication/register/register.component.html
@@ -46,5 +46,9 @@
     <div class="login-link">
       If you already have an account, <a routerLink="/authentication/login">Login</a> here.
     </div>
+    
   </form>
+  
 </div>
+
+<app-footer></app-footer>
